# ZegoLiveDemo5Rtp

./: README.md
android/LiveDemo5/: demo_version.txt
android/LiveDemo5/app/: build.gradle
ios/LiveDemo5/: demo_version.txt
ios/LiveDemo5/GameLive/: Info.plist  SampleHandler.m  ZegoAVKitManager.m
ios/LiveDemo5/GameLiveUI/: BroadcastViewController.m
ios/LiveDemo5/LiveDemo3/: ZegoAVKitManager.h  ZegoAVKitManager.m  ZegoAnchorViewController.m  ZegoAudienceViewController.m  ZegoLiveToolViewController.m  ZegoLiveViewController.h  ZegoLiveViewController.m  ZegoMixStreamAnchorViewController.m  ZegoMixStreamAudienceViewController.m  ZegoMoreAnchorViewController.m  ZegoMoreAudienceViewController.m  ZegoPublishViewController.m  ZegoSetTableViewController.m  ZegoSettings.h  ZegoSettings.m  ZegoTestPullViewController.m  ZegoWerewolfBaseViewController.h  ZegoWerewolfBaseViewController.m  ZegoWerewolfHostViewController.m  ZegoWerewolfInTurnViewController.m
ios/LiveDemo5/LiveDemo3.xcodeproj/: project.pbxproj
ios/LiveDemo5/LiveDemo3/Base.lproj/: Localizable.strings  Main.storyboard
ios/LiveDemo5/LiveDemo3/advanced/: ZegoVideoCaptureFromImage.m  ZegoVideoFilterDemo.m  video_capture_encode_callback.mm
ios/LiveDemo5/LiveDemo3/en.lproj/: Localizable.strings
ios/LiveDemo5/LiveDemo3/zh-Hans.lproj/: Localizable.strings
windows/LiveDemo5/VideoTalk/: CMakeLists.txt  ZegoVideoTalkDemo.h
windows/LiveDemo5/VideoTalk/Base/: ZegoBase.h
windows/LiveDemo5/VideoTalk/Config/: ZegoUserConfig.h
windows/LiveDemo5/VideoTalk/Dialog/: ZegoMusicHookDialog.h  ZegoSettingsDialog.h  ZegoVideoTalkDialog.h
windows/LiveDemo5/VideoTalk/GeneratedFiles/: qrc_style.cpp
windows/LiveDemo5/VideoTalk/Signal/: ZegoSDKSignal.h
windows/LiveDemo5/ZegoLiveDemo/: CMakeLists.txt  ZegoImageShowDialog.ui  ZegoLiveDemo.aps  ZegoLiveDemo.cpp  ZegoLiveDemo.h  ZegoLiveDemo.sln  ZegoLiveDemo.vcxproj  ZegoLiveDemo.vcxproj.filters  ZegoLiveDemoSix.sln  ZegoLiveDemoSix.vcxproj  ZegoLiveRoomDialog.cpp  ZegoLiveRoomDialog.h  ZegoLiveRoomDialog.ui  ZegoMainDialog.ui  ZegoShareDialog.ui  main.cpp  resource.h  style.qrc  stylesheet.qss
windows/LiveDemo5/ZegoLiveDemo/AudioHookDialog/: ZegoMusicHookDialog.cpp  ZegoMusicHookDialog.h
windows/LiveDemo5/ZegoLiveDemo/Base/: IncludeZegoLiveRoomApi.h  ZegoBase.cpp  ZegoBase.h  ZegoBaseDialog.cpp  ZegoBaseDialog.h
windows/LiveDemo5/ZegoLiveDemo/Config/: ZegoUserConfig.cpp  ZegoUserConfig.h  ZegoUserConfig.ini
windows/LiveDemo5/ZegoLiveDemo/Delegate/: ChatListDelegate.cpp  ChatListDelegate.h
windows/LiveDemo5/ZegoLiveDemo/Dialog/: ZegoImageShowDialog.cpp  ZegoImageShowDialog.h  ZegoMainDialog.cpp  ZegoMainDialog.h  ZegoMixStreamAnchorDialog.cpp  ZegoMixStreamAnchorDialog.h  ZegoMixStreamAudienceDialog.cpp  ZegoMixStreamAudienceDialog.h  ZegoMoreAnchorDialog.cpp  ZegoMoreAnchorDialog.h  ZegoMoreAudienceDialog.cpp  ZegoMoreAudienceDialog.h  ZegoMusicHookDialog.h  ZegoPublish2StreamDialog.cpp  ZegoPublish2StreamDialog.h  ZegoShareDialog.cpp  ZegoShareDialog.h  ZegoSingleAnchorDialog.cpp  ZegoSingleAnchorDialog.h  ZegoSingleAudienceDialog.cpp  ZegoSingleAudienceDialog.h
windows/LiveDemo5/ZegoLiveDemo/GeneratedFiles/: qrc_ZegoShareDialog.cpp  qrc_style.cpp  ui_ZegoImageShowDialog.h  ui_ZegoLiveRoomDialog.h  ui_ZegoMainDialog.h  ui_ZegoMusicHookDialog.h  ui_ZegoShareDialog.h
windows/LiveDemo5/ZegoLiveDemo/GeneratedFiles/Debug/: moc_ZegoEnterRoomButton.cpp  moc_ZegoMainDialog.cpp  moc_ZegoMixStreamAnchorDialog.cpp  moc_ZegoMixStreamAudienceDialog.cpp  moc_ZegoMoreAnchorDialog.cpp  moc_ZegoMoreAudienceDialog.cpp  moc_ZegoSDKSignal.cpp  moc_ZegoSingleAnchorDialog.cpp
windows/LiveDemo5/ZegoLiveDemo/GeneratedFiles/Release/: moc_ChatListDelegate.cpp  moc_ZegoAVView.cpp  moc_ZegoBaseDialog.cpp  moc_ZegoImageShowDialog.cpp  moc_ZegoMainDialog.cpp  moc_ZegoMicrophoneButton.cpp  moc_ZegoMixStreamAnchorDialog.cpp  moc_ZegoMixStreamAudienceDialog.cpp  moc_ZegoMoreAnchorDialog.cpp  moc_ZegoMoreAudienceDialog.cpp  moc_ZegoMusicHookDialog.cpp  moc_ZegoProgressIndicator.cpp  moc_ZegoPublish2StreamDialog.cpp  moc_ZegoRoomMessageLabel.cpp  moc_ZegoSDKSignal.cpp  moc_ZegoShareDialog.cpp  moc_ZegoSingleAnchorDialog.cpp  moc_ZegoSingleAudienceDialog.cpp  moc_ZegoVideoFilterDemo.cpp  moc_frameless_helper.cpp
windows/LiveDemo5/ZegoLiveDemo/Resources/: EnterButton.qss
windows/LiveDemo5/ZegoLiveDemo/Settings/: ZegoSettingsModel.cpp  ZegoSettingsModel.h
windows/LiveDemo5/ZegoLiveDemo/Signal/: ZegoSDKSignal.cpp  ZegoSDKSignal.h
windows/LiveDemo5/ZegoLiveDemo/SoftWareInfo/: ZegoSoftWareInfo.cpp  ZegoSoftWareInfo.h
windows/LiveDemo5/ZegoLiveDemo/UI/: ZegoAVView.cpp  ZegoAVView.h  ZegoDeviceComboBox.cpp  ZegoDeviceComboBox.h  ZegoEnterRoomButton.cpp  ZegoEnterRoomButton.h  ZegoImageButton.cpp  ZegoImageButton.h  ZegoMicrophoneButton.cpp  ZegoMicrophoneButton.h  ZegoProgressIndicator.cpp  ZegoProgressIndicator.h  ZegoRoomList.h
windows/LiveDemo5/ZegoLiveDemo/VideoCapture/: ZegoVideoCaptureDeviceDemo.cpp  ZegoVideoCaptureDeviceDemo.h  ZegoVideoCaptureFactoryDemo.cpp  ZegoVideoCaptureFactoryDemo.h
windows/LiveDemo5/ZegoLiveDemo/VideoFilter/: ZegoVideoFilterDemo.cpp  ZegoVideoFilterDemo.h  ZegoVideoFilterFactoryDemo.cpp  ZegoVideoFilterFactoryDemo.h
windows/LiveDemo5/ZegoLiveDemo/ui/entry/: ZegoEntryDlg.cpp
windows/LiveDemo5/ZegoLiveDemo/ui/liveroom/: ZegoRoomDlg.cpp  ZegoRoomDlg.h
windows/LiveDemo5/ZegoLiveDemo/日志/: zegoavlog1.txt
windows/LiveDemo5/build-win/: generate.bat
windows/LiveDemo5/include/zegoliveroom/: AVDefines.h  ChatRoom.h  LiveRoom-IM.h  LiveRoom-Player.h  LiveRoom-Publisher.h  LiveRoom.h  LiveRoomCallback-IM.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomCallback.h  LiveRoomDefines-IM.h  LiveRoomDefines-Publisher.h  LiveRoomDefines.h  RoomDefines.h  audio_in_output.h  video_capture.h  zego-api-defines.h  zego-api-external-video-capture.h  zego-api-external-video-filter.h  zego-api-mix-engine-playout.h  zego-api-mix-stream.h
windows/LiveDemo5/include/zegosurfacemerge/: ZegoSurfaceMerge.h  ZegoSurfaceMergeCallback.h
(+82 files in other folders)
